--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".recent_message"></activity>
+        <activity android:name=".StartActivity"></activity>
+        <activity android:name=".recent_message" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Chatting"/>
+        <activity android:name=".Chatting" />
         <activity android:name=".Contacts" />
         <activity android:name=".Register" />
     </application>
